--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,7 @@ fail = ["actix-http/fail"]
 openssl = ["open-ssl", "actix-server/openssl", "awc/openssl"]
 
 # rustls
-rustls = ["rust-tls", "actix-server/rustls", "awc/rustls"]
+# rustls = ["rust-tls", "actix-server/rustls", "awc/rustls"]
 
 [dependencies]
 actix-codec = "0.2.0-alpha.1"
