add test and main macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "actix-connect",
   "actix-ioframe",
   "actix-rt",
+  "actix-macros",
   "actix-service",
   "actix-server",
   "actix-server-config",
@@ -18,6 +19,7 @@ actix-codec = { path = "actix-codec" }
 actix-connect = { path = "actix-connect" }
 actix-ioframe = { path = "actix-ioframe" }
 actix-rt = { path = "actix-rt" }
+actix-macros = { path = "actix-macros" }
 actix-server = { path = "actix-server" }
 actix-server-config = { path = "actix-server-config" }
 actix-service = { path = "actix-service" }
