--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -18,13 +18,13 @@ name = "actix_rt"
 path = "src/lib.rs"
 
 [dependencies]
+actix-macros = "0.1.0-alpha.1"
 actix-threadpool = "0.2"
 futures = "0.3.1"
 
-# TODO: Replace this with dependency on tokio-runtime once it is ready
-tokio = { version = "0.2.0-alpha.6" }
-tokio-timer = "=0.3.0-alpha.6"
+tokio = "=0.2.0-alpha.6"
 tokio-executor = "=0.2.0-alpha.6"
 tokio-net = "=0.2.0-alpha.6"
+tokio-timer = "=0.3.0-alpha.6"
 
 copyless = "0.1.4"
