--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -24,8 +24,7 @@ path = "src/lib.rs"
 
 [dependencies]
 futures = "0.3.1"
-pin-project = "0.4.5"
+pin-project = "0.4.6"
 
 [dev-dependencies]
-tokio = "0.2.0-alpha.6"
-# actix-rt = "1.0.0-alpha.1"
+actix-rt = "1.0.0-alpha.1"
