--- a/actix-testing/Cargo.toml
+++ b/actix-testing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-testing"
-version = "0.3.0-alpha.1"
+version = "0.3.0-alpha.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix testing utils"
 keywords = ["network", "framework", "async", "futures"]
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-rt = "1.0.0-alpha.1"
+actix-macros = "0.1.0-alpha.1"
 actix-server = "0.8.0-alpha.1"
 actix-server-config = "0.3.0-alpha.1"
 actix-service = "1.0.0-alpha.1"
@@ -25,5 +26,4 @@ actix-service = "1.0.0-alpha.1"
 log = "0.4"
 net2 = "0.2"
 futures = "0.3.1"
-tokio = "0.2.0-alpha.6"
 tokio-net = { version = "0.2.0-alpha.6" }
