--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -24,12 +24,13 @@ path = "src/lib.rs"
 default = []
 nativetls = ["native-tls", "tokio-tls"]
 openssl = ["open-ssl", "tokio-openssl", "actix-server-config/openssl"]
-#rustls = ["rust-tls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rustls"]
+rustls = ["rust-tls", "tokio-rustls", "webpki", "webpki-roots", "actix-server-config/rustls"]
 
 [dependencies]
-actix-rt = "1.0.0-alpha.1"
 actix-service = "1.0.0-alpha.1"
 actix-server-config = "0.3.0-alpha.1"
+actix-rt = "1.0.0-alpha.1"
+actix-codec = "0.2.0-alpha.1"
 
 log = "0.4"
 num_cpus = "1.0"
@@ -37,11 +38,7 @@ mio = "0.6.19"
 net2 = "0.2"
 futures = "0.3.1"
 slab = "0.4"
-
-tokio = "0.2.0-alpha.6"
-tokio-io = "0.2.0-alpha.6"
 tokio-net = { version = "0.2.0-alpha.6", features = ["signal", "tcp", "uds"] }
-tokio-timer = "0.3.0-alpha.6"
 
 # unix domain sockets
 mio-uds = { version = "0.6.7" }
