--- a/actix-cors/Cargo.toml
+++ b/actix-cors/Cargo.toml
@@ -21,3 +21,6 @@ actix-web = "2.0.0-alpha.1"
 actix-service = "1.0.0-alpha.1"
 derive_more = "0.99.2"
 futures = "0.3.1"
+
+[dev-dependencies]
+actix-rt = "1.0.0-alpha.1"
