--- a/actix-server-config/Cargo.toml
+++ b/actix-server-config/Cargo.toml
@@ -14,16 +14,16 @@ name = "actix_server_config"
 path = "src/lib.rs"
 
 [package.metadata.docs.rs]
-features = ["openssl", "rustls"]
+features = ["openssl"] #, "rustls"]
 
 [features]
 default = []
 openssl = ["tokio-openssl"]
-rustls = ["tokio-rustls"]
+# rustls = ["tokio-rustls"]
 
 [dependencies]
 actix-codec = "0.2.0-alpha.1"
 tokio-net = { version = "=0.2.0-alpha.6", features = ["tcp", "uds"] }
 tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
-#tokio-rustls = { version = "0.12.0-alpha.8", optional = true }
-tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
+# tokio-rustls = { version = "0.12.0-alpha.8", optional = true }
+# tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
