--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -22,7 +22,7 @@ actix-macros = "0.1.0-alpha.1"
 actix-threadpool = "0.2"
 futures = "0.3.1"
 
-tokio = "=0.2.0-alpha.6"
+tokio = { version = "=0.2.0-alpha.6", features=["tcp","uds","udp"] }
 tokio-executor = "=0.2.0-alpha.6"
 tokio-net = "=0.2.0-alpha.6"
 tokio-timer = "=0.3.0-alpha.6"
