--- a/actix-framed/Cargo.toml
+++ b/actix-framed/Cargo.toml
@@ -25,7 +25,6 @@ actix-service = "1.0.0-alpha.1"
 actix-router = "0.1.2"
 actix-rt = "1.0.0-alpha.1"
 actix-http = "0.3.0-alpha.1"
-actix-server-config = "0.3.0-alpha.1"
 
 bytes = "0.4"
 futures = "0.3.1"
@@ -33,7 +32,7 @@ pin-project = "0.4.6"
 log = "0.4"
 
 [dev-dependencies]
-actix-server = { version = "0.8.0-alpha.1", features=["openssl"] }
+actix-server = { version = "0.8.0-alpha.1" }
 actix-connect = { version = "0.3.0-alpha.1", features=["openssl"] }
 actix-http-test = { version = "0.3.0-alpha.1", features=["openssl"] }
 actix-utils = "0.5.0-alpha.1"
