--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-server"
-version = "0.8.0-alpha.2"
+version = "1.0.0-alpha.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix server - General purpose tcp server"
 keywords = ["network", "framework", "async", "futures"]
@@ -21,9 +21,10 @@ path = "src/lib.rs"
 default = []
 
 [dependencies]
-actix-service = "1.0.0-alpha.1"
+actix-service = "1.0.0-alpha.2"
 actix-rt = "1.0.0-alpha.2"
-actix-codec = "0.2.0-alpha.1"
+actix-codec = "0.2.0-alpha.2"
+actix-utils = "1.0.0-alpha.2"
 
 log = "0.4"
 num_cpus = "1.0"
@@ -40,5 +41,4 @@ mio-uds = { version = "0.6.7" }
 
 [dev-dependencies]
 bytes = "0.4"
-actix-codec = "0.2.0-alpha.1"
 env_logger = "0.6"
