--- a/actix-codec/Cargo.toml
+++ b/actix-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-codec"
-version = "0.2.0-alpha.1"
+version = "0.2.0-alpha.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -21,6 +21,6 @@ path = "src/lib.rs"
 bytes = "0.4.12"
 futures = "0.3.1"
 pin-project = "0.4.5"
-tokio-io = "0.2.0-alpha.6"
-tokio-codec = "0.2.0-alpha.6"
+tokio-io = "=0.2.0-alpha.6"
+tokio-codec = "=0.2.0-alpha.6"
 log = "0.4"
