--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/lib.rs"
 
 [dependencies]
 futures = "0.3.1"
-pin-project = "0.4.6"
+pin-project-lite = "0.1.1"
 
 [dev-dependencies]
-actix-rt = "1.0.0-alpha.1"
+actix-rt = "1.0.0-alpha.2"
