--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-http"
-version = "0.3.0-alpha.1"
+version = "0.3.0-alpha.2"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix http primitives"
 readme = "README.md"
@@ -47,15 +47,15 @@ fail = ["failure"]
 secure-cookies = ["ring"]
 
 [dependencies]
-actix-service = "1.0.0-alpha.1"
-actix-codec = "0.2.0-alpha.1"
-actix-connect = "1.0.0-alpha.1"
-actix-utils = "0.5.0-alpha.1"
-actix-rt = "1.0.0-alpha.1"
-actix-threadpool = "0.2.0-alpha.1"
-actix-tls = { git = "https://github.com/actix/actix-net.git", optional = true }
+actix-service = "1.0.0-alpha.2"
+actix-codec = "0.2.0-alpha.2"
+actix-connect = "1.0.0-alpha.2"
+actix-utils = "1.0.0-alpha.2"
+actix-rt = "1.0.0-alpha.2"
+actix-threadpool = "0.3.0"
+actix-tls = { version = "1.0.0-alpha.1", optional = true }
 
-base64 = "0.10"
+base64 = "0.11"
 bitflags = "1.0"
 bytes = "0.4"
 copyless = "0.1.4"
@@ -74,7 +74,7 @@ language-tags = "0.2"
 log = "0.4"
 mime = "0.3"
 percent-encoding = "2.1"
-pin-project = "0.4.5"
+pin-project = "0.4.6"
 rand = "0.7"
 regex = "1.0"
 serde = "1.0"
@@ -83,8 +83,6 @@ sha1 = "0.6"
 slab = "0.4"
 serde_urlencoded = "0.6.1"
 time = "0.1.42"
-
-tokio-net = "=0.2.0-alpha.6"
 trust-dns-resolver = { version="0.18.0-alpha.1", default-features = false }
 
 # for secure cookie
@@ -103,11 +101,10 @@ tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
 # webpki-roots = { version = "0.18", optional = true }
 
 [dev-dependencies]
-actix-server = { version = "0.8.0-alpha.1" }
-actix-connect = { version = "1.0.0-alpha.1", features=["openssl"] }
-actix-http-test = { version = "0.3.0-alpha.1", features=["openssl"] }
-#actix-tls = { version = "0.1.0-alpha.1", features=["openssl"] }
-actix-tls = { git = "https://github.com/actix/actix-net.git", features=["openssl"] }
+actix-server = { version = "1.0.0-alpha.2" }
+actix-connect = { version = "1.0.0-alpha.2", features=["openssl"] }
+actix-http-test = { version = "0.3.0-alpha.2", features=["openssl"] }
+actix-tls = { version = "1.0.0-alpha.1", features=["openssl"] }
 env_logger = "0.6"
 serde_derive = "1.0"
 open-ssl = { version="0.10", package="openssl" }
