replace hashbrown with std hashmap

--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -64,7 +64,7 @@ derive_more = "0.99.2"
 either = "1.5.2"
 encoding_rs = "0.8"
 futures = "0.3.1"
-hashbrown = "0.6.3"
+fxhash = "0.2.1"
 h2 = "0.2.0-alpha.3"
 http = "0.1.17"
 httparse = "1.3"
