--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,7 +87,7 @@ bytes = "0.4"
 derive_more = "0.99.2"
 encoding_rs = "0.8"
 futures = "0.3.1"
-hashbrown = "0.6.3"
+fxhash = "0.2.1"
 log = "0.4"
 mime = "0.3"
 net2 = "0.2.33"
