--- a/actix-service/Cargo.toml
+++ b/actix-service/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-service"
-version = "1.0.0-alpha.2"
+version = "1.0.0-alpha.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix Service"
 keywords = ["network", "framework", "async", "futures"]
@@ -23,8 +23,8 @@ name = "actix_service"
 path = "src/lib.rs"
 
 [dependencies]
-futures = "0.3.1"
-pin-project-lite = "0.1.1"
+futures-util = "0.3.1"
+pin-project = "0.4.6"
 
 [dev-dependencies]
 actix-rt = "1.0.0-alpha.2"
