--- a/actix-codec/Cargo.toml
+++ b/actix-codec/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-codec"
-version = "0.2.0-alpha.2"
+version = "0.2.0-alpha.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Utilities for encoding and decoding frames"
 keywords = ["network", "framework", "async", "futures"]
@@ -18,9 +18,10 @@ name = "actix_codec"
 path = "src/lib.rs"
 
 [dependencies]
-bytes = "0.4.12"
+bitflags = "1.2.1"
+bytes = "0.5.2"
 futures = "0.3.1"
-pin-project = "0.4.5"
-tokio-io = "=0.2.0-alpha.6"
-tokio-codec = "=0.2.0-alpha.6"
+pin-project = "0.4.6"
+tokio = { version = "0.2.2", default-features=false }
+tokio-util = { version = "0.2.0", default-features=false, features=["codec"] }
 log = "0.4"
