--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-connect"
-version = "1.0.0-alpha.2"
+version = "1.0.0-alpha.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix connect - tcp connector service"
 keywords = ["network", "framework", "async", "futures"]
@@ -27,33 +27,33 @@ default = ["uri"]
 openssl = ["open-ssl", "tokio-openssl"]
 
 # rustls
-# rustls = ["rust-tls", "tokio-rustls", "webpki"]
+rustls = ["rust-tls", "tokio-rustls", "webpki"]
 
 # support http::Uri as connect address
 uri = ["http"]
 
 [dependencies]
 actix-service = "1.0.0-alpha.3"
-actix-codec = "0.2.0-alpha.2"
-actix-utils = "1.0.0-alpha.2"
-actix-rt = "1.0.0-alpha.2"
+actix-codec = "0.2.0-alpha.3"
+actix-utils = "1.0.0-alpha.3"
+actix-rt = "1.0.0-alpha.3"
 derive_more = "0.99.2"
 either = "1.5.2"
 futures = "0.3.1"
-http = { version = "0.1.17", optional = true }
+http = { version = "0.2.0", optional = true }
 log = "0.4"
-trust-dns-resolver = { version="0.18.0-alpha.1", default-features = false }
+# trust-dns-resolver = { version="0.18.0", default-features = false }
+trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git", branch = "update-tokio-0.2-alpha.2" }
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
-tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
+tokio-openssl = { version = "0.4.0", optional = true }
 
 # rustls
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
-# tokio-rustls = { version = "0.10.0", optional = true }
-# tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
+tokio-rustls = { version = "0.12.0", optional = true }
 webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
-bytes = "0.4"
+bytes = "0.5.2"
 actix-testing = { version="1.0.0-alpha.2" }
