--- a/actix-rt/Cargo.toml
+++ b/actix-rt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-rt"
-version = "1.0.0-alpha.2"
+version = "1.0.0-alpha.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix runtime"
 keywords = ["network", "framework", "async", "futures"]
@@ -22,8 +22,4 @@ actix-macros = "0.1.0-alpha.1"
 actix-threadpool = "0.3"
 futures = "0.3.1"
 copyless = "0.1.4"
-
-tokio = { version = "=0.2.0-alpha.6", features=["rt-current-thread","tcp","uds","udp","timer","signal"] }
-tokio-executor = "=0.2.0-alpha.6"
-tokio-net = "=0.2.0-alpha.6"
-tokio-timer = "=0.3.0-alpha.6"
+tokio = { version = "0.2.2", default-features=false, features=["rt-core", "rt-util", "io-driver", "tcp", "uds", "udp", "time", "signal"] }
