--- a/actix-tls/Cargo.toml
+++ b/actix-tls/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-tls"
-version = "1.0.0-alpha.1"
+version = "1.0.0-alpha.3"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix tls services"
 keywords = ["network", "framework", "async", "futures"]
@@ -30,9 +30,9 @@ rustls = ["rust-tls", "webpki"]
 
 [dependencies]
 actix-service = "1.0.0-alpha.3"
-actix-codec = "0.2.0-alpha.2"
-actix-utils = "1.0.0-alpha.2"
-actix-rt = "1.0.0-alpha.2"
+actix-codec = "0.2.0-alpha.3"
+actix-utils = "1.0.0-alpha.3"
+actix-rt = "1.0.0-alpha.3"
 derive_more = "0.99.2"
 either = "1.5.2"
 futures = "0.3.1"
@@ -40,15 +40,14 @@ log = "0.4"
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
-tokio-openssl = { version = "=0.4.0-alpha.6", optional = true }
+tokio-openssl = { version = "0.4.0", optional = true }
 
 # rustls
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
 webpki = { version = "0.21", optional = true }
 webpki-roots = { version = "0.17", optional = true }
-# tokio-rustls = { version = "0.12.0-alpha.2", optional = true }
-# tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
+tokio-rustls = { version = "0.12.0", optional = true }
 
 [dev-dependencies]
-bytes = "0.4"
-actix-testing = { version="1.0.0-alpha.2" }
+bytes = "0.5"
+actix-testing = { version="1.0.0-alpha.3" }
