--- a/actix-tls/Cargo.toml
+++ b/actix-tls/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 workspace = ".."
 
 [package.metadata.docs.rs]
-features = ["openssl", "rustls"]
+features = ["openssl", "rustls", "nativetls"]
 
 [lib]
 name = "actix_tls"
@@ -27,6 +27,9 @@ openssl = ["open-ssl", "tokio-openssl"]
 
 # rustls
 rustls = ["rust-tls", "webpki"]
+
+# nativetls
+nativetls = ["native-tls", "tokio-tls"]
 
 [dependencies]
 actix-service = "1.0.0-alpha.3"
@@ -47,6 +50,10 @@ rust-tls = { version = "0.16.0", package = "rustls", optional = true }
 webpki = { version = "0.21", optional = true }
 webpki-roots = { version = "0.17", optional = true }
 tokio-rustls = { version = "0.12.0", optional = true }
+
+# native-tls
+native-tls = { version="0.2", optional = true }
+tokio-tls = { version="0.3", optional = true }
 
 [dev-dependencies]
 bytes = "0.5"
