--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -42,8 +42,7 @@ either = "1.5.2"
 futures = "0.3.1"
 http = { version = "0.2.0", optional = true }
 log = "0.4"
-# trust-dns-resolver = { version="0.18.0", default-features = false }
-trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git" }
+trust-dns-resolver = { version="0.18.0-alpha.2", default-features = false, features=["tokio"] }
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
