--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -22,8 +22,7 @@ default = ["http"]
 [dependencies]
 regex = "1.3.1"
 serde = "1.0.80"
-# string = "0.2.1"
-string = { git = "https://github.com/carllerche/string.git" }
+bytestring = "0.1.0"
 log = "0.4.8"
 http = { version="0.2.0", optional=true }
 
