--- a/actix-ioframe/Cargo.toml
+++ b/actix-ioframe/Cargo.toml
@@ -19,7 +19,7 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-service = "1.0.0-alpha.3"
-actix-codec = "0.2.0-alpha.2"
+actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.2"
 actix-rt = "1.0.0-alpha.2"
 bytes = "0.5"
