--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -23,7 +23,7 @@ default = []
 [dependencies]
 actix-service = "1.0.0-alpha.4"
 actix-rt = "1.0.0-alpha.3"
-actix-codec = "0.2.0-alpha.3"
+actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.3"
 
 log = "0.4"
