--- a/actix-tls/Cargo.toml
+++ b/actix-tls/Cargo.toml
@@ -33,7 +33,7 @@ nativetls = ["native-tls", "tokio-tls"]
 
 [dependencies]
 actix-service = "1.0.0-alpha.3"
-actix-codec = "0.2.0-alpha.3"
+actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.3"
 actix-rt = "1.0.0-alpha.3"
 derive_more = "0.99.2"
